Add zip importing and push zip locations to server side